--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.0.7
 django-heroku==0.3.1
 django-rest-knox==4.1.0
 djangorestframework==3.11.0
+gunicorn==20.0.4
 idna==2.9
 psycopg2==2.8.5
 pycparser==2.20
